if (APPLE)
    # deploy QT
    set(pfx "")
    set(sfx ".app")
    get_target_property(output_name ckb-next OUTPUT_NAME)
    if (output_name)
        set(exe "${pfx}${output_name}${sfx}")
    else ()
        set(exe "${pfx}ckb-next${sfx}")
    endif ()

    set(dirs "")
    if (CMAKE_PREFIX_PATH)
        foreach (dir ${CMAKE_PREFIX_PATH})
            list(APPEND dirs "${dir}/bin" "${dir}/lib")
        endforeach ()
    endif ()

    include(InstallRequiredSystemLibraries)
    include(DeployQt5)
    install_qt5_executable("${exe}" "" "" "${dirs}" "")
endif ()

install(CODE [[message(STATUS " ")]])
install(CODE [[message(STATUS "-------------------------------------------------------------")]])
install(CODE [[message(STATUS "ckb-next was successfully installed!")]])
install(CODE [[message(STATUS "Start the ckb-next program using the casual program launcher.")]])
if (APPLE)
    install(CODE [[message(STATUS "Before launching you must chown /Applications/ckb-next.app")]])
    install(CODE [[message(STATUS "recursively with your_username:staff")]])
    install(CODE [[message(STATUS "If you don't know what this means, better download a .pkg")]])
endif ()
install(CODE [[message(STATUS "-------------------------------------------------------------")]]
